# quadrotor_mpc

./: CMakeLists.txt  README.md  all_buttons.sh  buttons.sh  config_panel.sh  package.xml  screenrc_full_mpc  screenrc_full_mpc_traj  screenrc_linear_mpc  screenrc_linear_mpc_test  screenrc_path_record  setup.py
bashrc/: .bashrc_all_buttons  .bashrc_buttons  .bashrc_config_panel  .bashrc_full_mpc  .bashrc_linear_mpc  .bashrc_mpc_test  .bashrc_path  .bashrc_quad_gazebo  .bashrc_results  .bashrc_teleop  .bashrc_wind
config/: MPC_parameters.yaml  tube_parameters.yaml
include/quadrotor_mpc/: full_acados_mpc.h  full_mpc.h  linear_acados_mpc.h  linear_mpc.h  quaternion.h
include/quadrotor_mpc/Drafts/: MPC.h  casadi_model.h
include/quadrotor_mpc/acados_solver/full/: Makefile  acados_solver.pxd  acados_solver_full_drone_dynamics.c  acados_solver_full_drone_dynamics.h  main_full_drone_dynamics.c
include/quadrotor_mpc/acados_solver/full/full_drone_dynamics_model/: full_drone_dynamics_dyn_disc_phi_fun.c  full_drone_dynamics_dyn_disc_phi_fun_jac.c  full_drone_dynamics_dyn_disc_phi_fun_jac_hess.c  full_drone_dynamics_model.h
include/quadrotor_mpc/acados_solver/linear/: Makefile  acados_solver.pxd  acados_solver_drone_dynamics.c  acados_solver_drone_dynamics.h  main_drone_dynamics.c
include/quadrotor_mpc/acados_solver/linear/drone_dynamics_model/: drone_dynamics_dyn_disc_phi_fun.c  drone_dynamics_dyn_disc_phi_fun_jac.c  drone_dynamics_dyn_disc_phi_fun_jac_hess.c  drone_dynamics_model.h
include/quadrotor_mpc/current/: acados_mpc.h
json/: full_quadrotor_ocp.json  quadrotor_ocp.json
launch/: Invariant_Process.launch  acados_json_generation.launch  full_mpc.launch  linear_mpc.launch  linear_mpc_test.launch  mpc_gazebo.launch  traj_and_obstacles.launch
launch/Drafts/: acados_dynFunc_generation.launch
screens/: test1.webm  test2.webm  test3.webm
scripts/: MPC_test.py  forward_test.py  mat_utils.py  plot_robot_path.py  records.py  results.py  tube_validation_node.py  wind_setup.py
scripts/Acados_Generators/: generate_full_ocp.py  generate_linear_ocp.py
scripts/Invariant_Design/: Classic_Forward_Casadi.py  Reduced_Jacobian_Linearization.py  Robust_Forward_Casadi.py  discrete_noise_forward.py  equilibrium_set.py
scripts/Invariant_Design/CasADi_formulas/: reduced_dyn_f.casadi  reduced_dyn_f_INTERVAL.casadi
scripts/Invariant_Design/Drafts/: expression_parser.py  symbolic_state_to_input.py
scripts/Invariant_Design/config/: LJ_parameters.yaml
scripts/Invariant_Design/nodes/: Classic_LJ_node.py
scripts/Invariant_Design/nodes/Drafts/: Robust_LJ_node.py
scripts/drafts/: roll_pitch.py
scripts/msg_pyfiles/: Classic_Invariant_msg.py
scripts/npy/: path.npy
scripts/yaml/: config.yaml  feedback_K.yaml  mat_utils.yaml
scripts/yaml/Linear_Coefficients/: INTERVAL_reduced_partial_derivatives_values.yaml  reduced_accelerations_formulas.yaml  reduced_partial_derivatives_values.yaml
scripts/yaml/Linear_Coefficients/Discrete/: INTERVAL_reduced_partial_derivatives_values.yaml  reduced_accelerations_formulas.yaml  reduced_partial_derivatives_values.yaml
src/: example_gen_ac.cpp  full_mpc.cpp  full_mpc_node.cpp  linear_acados_mpc.cpp  linear_mpc.cpp  linear_mpc_node.cpp
src/Acados/full/: full_acados_mpc.cpp  full_acados_mpc_node.cpp
src/Acados/linear/: linear_acados_mpc.cpp  linear_acados_mpc_node.cpp
src/Drafts/: MPC.cpp  MPC2.cpp  MPC_example.cpp  casadi_model.cpp  casadi_model_node.cpp
src/quadrotor_mpc/: optim_utils.py  transform_utils.py
srv/: Equilibrium.srv  Robust_Equilibrium.srv  Tube.srv
